--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@allui/react",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "An all-in-one React UI Framework for efficient web application development.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.es.js",
@@ -33,6 +33,7 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.21",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.5",
     "postcss": "^8.4.17",
     "react": "^18.2.0",
@@ -50,7 +51,8 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@allui/css": "*"
+    "@allui/css": "*",
+    "styled-components": "^5.3.6"
   },
   "homepage": "https://github.com/all-ui/react",
   "repository": {
