--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.0.21",
     "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.5",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
